# IP_simpleTCP

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  READMe.md  build.sh
client/: CMakelists.txt  PereodicEvent.hpp  client.cpp  client.h  main.cpp
server/: CMakelists.txt  logger.cpp  logger.h  main.cpp  server.cpp  server.h
src/: include.h  utilities.cpp  utilities.h
